--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
 body {
   margin: 0;
   padding: 0;
@@ -8,4 +10,11 @@ body {
 
 a {
   color: #E7DCD2;
+}
+
+h1, h2 {
+	font-family: 'Roboto', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 300;
 }
