improve - cart modal styling]

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -10,3 +10,18 @@
     min-height: calc(100vh - 20px);
   }
 }
+
+.modal-content {
+	background-color: #E7DCD2;
+	color: #425351;
+}
+
+.modal-header {
+	border-bottom: 1px solid #435451
+}
+  .modal-header .close {
+    padding: 20px;
+  }
+.modal-footer {
+	border-top: 1px solid #435451
+}
