improve - cart counter view

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,16 @@
+.cart-link {
+  position: relative;
+}
+  .cart-link .counter {
+    position: absolute;
+    width: 16px;
+    left: 10px;
+    padding-top: 6px;
+    color: #435451;
+    font-size: 13px;
+    transform: rotate(-1deg);
+  }
+
 .modal-dialog {
     min-height: calc(100vh - 60px);
     display: flex;
