--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -12,8 +12,12 @@
 	box-shadow: 0 1.2em 5rem -1rem rgba(0,0,0,0.7);
 	transition: transform 0.1s ease-in-out, box-shadow 0.1s;
 }
-.slider .current-item .image:hover {
-	transform: translateY(-0.5rem) scale(1.0125);
+	.slider .current-item .image:hover {
+		transform: translateY(-0.5rem) scale(1.0125);
+	}
+
+.slider .current-item .descr p {
+	text-indent: 25px;
 }
 
 .slider .items {
