--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -24,10 +24,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
 }
 	.slider .items .item {
-		padding: 10px;
-		margin: 5px;
 		cursor: pointer;
 	}
 		.slider .items .item:hover .name {
