--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,18 @@ h1, h2 {
 section .container {
   margin-bottom: -40px;
 }
+
+.loading {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #425351;
+  z-index: 99999999;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hide {
+  display: none;
+}
