add - cart changeQuantity method

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -49,3 +49,9 @@ label {
 .form-group {
   margin-bottom: .7rem;
 }
+
+.order-list .quantity {
+  display: inline-block;
+  width: 25px;
+  text-align: center;
+}
