--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
 #header{
     top: 0px;
 }
+    #header .logo {
+        width: 125px;
+    }
     #header .overlay-menu ul {
         font-size: 24px;
     }
