--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400i,500');
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
   color: #E7DCD2;
   background-color: #425351;
 }
@@ -38,9 +40,14 @@ button {
 
 h1, h2 {
 	font-family: 'Roboto', sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 300;
+	letter-spacing: 2px;
+	font-weight: 500;
+}
+h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 2px;
+  font-style: italic;
+  font-weight: 400;
 }
 
 section .container {
