--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,10 @@
 .about p {
-	font-size: 15px;
-    margin-bottom: 1.3rem; 
+	font-size: 18px;
 }
 
-@media screen and (min-width: 575px) {
-  .about p {
-    font-size: 18px;
-  }
+@media screen and (max-width: 575px) {
+	.about p {
+		font-size: 15px;
+		line-height: 1.25em;
+	}
 }
