--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -55,3 +55,18 @@ label {
   width: 25px;
   text-align: center;
 }
+
+.cart-link--animation {
+  display: block;
+  -webkit-animation: heartbeat 0.6s; /* Safari 4+ */
+  -moz-animation: heartbeat 0.6s; /* Fx 5+ */
+  -o-animation: heartbeat 0.6s; /* Opera 12+ */
+  animation: heartbeat 0.6s;
+}
+@keyframes heartbeat {
+    0%   {transform: scale(1);}
+    25%  {transform: scale(1.8);}
+    50%  {transform: scale(1);}
+    75%  {transform: scale(1.65);}
+    100% {transform: scale(1);}
+}
