--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -16,6 +16,16 @@
 		transform: translateY(-0.5rem) scale(1.0125);
 	}
 
+.slider .current-item--mobile .image {
+	display: inline-block;
+	width: 80%;
+	max-width: 20rem;
+	margin: 1rem;
+	font-size: 1rem;
+	text-decoration: none;
+	box-shadow: 0 1.2em 5rem -1rem rgba(0,0,0,0.7);
+}
+
 .item-info p {
 	text-indent: 25px;
 }
