--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -26,6 +26,23 @@
 	box-shadow: 0 1.2em 5rem -1rem rgba(0,0,0,0.7);
 }
 
+/*color buttons*/
+.slider .current-item .colors .color {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	border-bottom: none;
+}
+.slider .current-item .colors .color.yellow {
+	background-color: yellow;
+}
+.slider .current-item .colors .color.darkgreen {
+	background-color: green;
+}
+.slider .current-item .colors .color.current {
+	border: 2px solid white;
+}
+
 .item-info p {
 	text-indent: 25px;
 }
