--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400i,500');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400i,500,700i');
 
 body {
   margin: 0;
