improve - slider item text

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -88,3 +88,9 @@
 .fp-controlArrow {
 	transform: scale(0.5);
 }
+
+.parts .part .photo {
+	max-width: 80px;
+	padding-right: 10px;
+	border-radius: 50%;
+}
