--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,13 @@
 
 #detailsSection {
     background: url('/img/home.jpg') center no-repeat;
-    background-size: cover;
+    background-size: 120%;
+    background-position: 0% 60%;
+    animation: snake-bg 22s infinite;
+    /*background-attachment: fixed;*/
+}
+@keyframes snake-bg {
+ 0% { background-position: 0% 60%; }
+ 50% { background-position: 120% 60%; }
+ 100% { background-position: 0% 60%; }
 }
