--- a/src/components/Test/Test.css
+++ b/src/components/Test/Test.css
@@ -1,6 +1,13 @@
 .test .answers {
 	list-style-type: none;
 }
+	.test .answers .answer {
+		width: 100%;
+		max-width: 250px;
+		word-wrap: break-word;
+		white-space: normal;
+		padding: 10px 4px;
+	}
 
 @media screen and (max-width: 575px) {
 	.test .question {
