--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,11 +2,16 @@
 	margin-bottom: -30px;
 }
 
+.slider .current-item .image-wrapper {
+	position: relative;
+}
 .slider .current-item .image {
 	display: inline-block;
 	width: 100%;
 	max-width: 20rem;
-	margin: 1rem 0;
+	position: absolute;
+	top: 0;
+	left: 0;
 	font-size: 1rem;
 	text-decoration: none;
 	box-shadow: 0 1.2em 5rem -1rem rgba(0,0,0,0.7);
@@ -14,6 +19,19 @@
 }
 	.slider .current-item .image:hover {
 		transform: translateY(-0.5rem) scale(1.0125);
+	}
+	.slider .current-item .image img {
+		width: 100%;
+	}
+.slider .current-item .image-underlay {
+	width: 100%;
+	max-width: 255px;
+	margin: 1rem 0;
+}
+	.slider .current-item .image-underlay:after {
+	  content: "";
+	  display: block;
+	  padding-bottom: 100%;
 	}
 
 .slider .current-item .info {
