--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,6 +2,7 @@
 	margin-bottom: -30px;
 }
 
+/*slider current image*/
 .slider .image-wrapper {
 	position: relative;
 }
@@ -14,6 +15,7 @@
 	left: 0;
 	font-size: 1rem;
 	text-decoration: none;
+	cursor: pointer;
 	box-shadow: 0 1.2em 5rem -1rem rgba(0,0,0,0.7);
 	transition: transform 0.1s ease-in-out, box-shadow 0.1s;
 }
@@ -97,7 +99,6 @@
 	transform: scale(0.5);
 }
 
-
 /*MODALS*/
 /*=== parts*/
 .partsModal .parts .part .photo {
@@ -112,4 +113,5 @@
 }
 	.imageModal .image img {
 		width: 100%;
+		cursor: pointer;
 	}
