improve - overlay-menu links size

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
     #header .logo {
         width: 125px;
     }
-    #header .overlay-menu ul {
+    .overlay-menu ul {
         font-size: 24px;
     }
 #footer{
