--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,9 @@ a {
 button {
   cursor: pointer;
 }
-.btn {
-  background-color: #e7dcd2 !important;
-}
+  .btn-light {
+    background-color: #e7dcd2 !important;
+  }
 
 h1, h2 {
 	font-family: 'Roboto', sans-serif;
