--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -144,6 +144,9 @@
 }
 
 /*=== image*/
+.imageModal .modal-body {
+	padding: 0;
+}
 .imageModal .image {
 	width: 100%;
 	display: flex;
@@ -151,17 +154,29 @@
 	align-items: center;
 }
 	.imageModal .image img {
-		width: 90%;
-		height: 90%;
+		width: 100%;
+		height: 100%;
 		cursor: pointer;
 		margin: 0 auto;
 	}
-	.imageModal .image .control {
-		font-size: 40px;
-		cursor: pointer;
-		transition: transform .3s;
+.imageModal .controls {
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+	.imageModal .controls  .control {
+		display: flex;
+		align-items: center;
+		height: 100%;
+		/* padding: 0 30px; */
+		font-size: 50px;
 	}
-		.imageModal .image .control:hover {
-			transform: scale(1.15);
-			transition: transform .3s;
+		.imageModal .controls  .control.left {
+			background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+		}
+		.imageModal .controls  .control.right {
+			background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 		}
