--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -21,6 +21,9 @@
 	font-size: 14px;
 	color: red;
 }
+.companyModal .modal-footer {
+	display: block;
+}
 
 @media screen and (max-width: 575px) {
 	.home .slogan {
