Created table for description

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -187,3 +187,10 @@
 		.imageModal .controls  .control.right {
 			background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 		}
+
+.item-info .table {
+	width: 100%;
+	border: 1px solid black;
+	margin: 5px;
+	text-align: center;
+}
